--- a/index.html
+++ b/index.html
@@ -1,16 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
-
-<head>
- <meta http-equiv="refresh" content="0;url=http://www.zuttonet.com" />
- <title>http://www.zuttonet.com</title>
-</head>
-
-<body bgcolor="#FFFFFF">
- <center>
-  <a href="http://www.zuttonet.com">click here if you're not redirected</a>
- </center>
-</body>
-
+<!DOCTYPE HTML>
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta http-equiv="refresh" content="0;url=http://www.zuttonet.com" />
+		<title>http://www.zuttonet.com</title>
+	</head>
+	<body>
+		<div><a href="http://www.zuttonet.com">click here if you're not redirected</a></center>
+	</body>
 </html>
